<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_green"
    tools:context=".LoginActivity"
    android:gravity="center">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/UsernamePlaceholder"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/PasswordPlaceholder"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginBtn"
        android:textSize="24sp"
        android:onClick="Login" />

</LinearLayout>