<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_green"
    android:orientation="vertical"
    android:paddingVertical="0dp"
    tools:context=".EventList">

    <GridView
        android:id="@+id/event_list"
        android:layout_width="wrap_content"
        android:layout_height="593dp"
        android:clipToOutline="true"
        android:numColumns="1"
        android:verticalSpacing="48dp" />
    <ActionMenuView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/teal_700"
            android:contentDescription="@string/DeleteBtnDescription"
            android:onClick="DeleteConvention"
            android:src="@drawable/delete_icon" />
        <ImageButton
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_700"
            android:contentDescription="@string/EditBtnDescription"
            android:onClick="EditConventionActivity"
            android:src="@drawable/edit_icon" />
        <ImageButton
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:backgroundTint="@color/teal_700"
            android:src="@drawable/create_icon"
            android:contentDescription="@string/AddConventionBtn"
            android:onClick="NewEventActivity" />
    </ActionMenuView>
</LinearLayout>